--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="search-sec">
             <div class="row">
                 <div class="search-type col-12 col-md-12 col-lg-6">
-                    <select id="searchMode" title="type of search" class="focus-ring mb-3 mb-lg-0">
+                    <select id="searchMode" title="type of search" class="mb-3 mb-lg-0 form-select">
                         <option>Search By Name</option>
                         <option>Search By Category</option>
                     </select>
